[gd_scene load_steps=13 format=3 uid="uid://cl8hpoh1v8yxi"]

[ext_resource type="Texture2D" uid="uid://c6ub2d4kngpp3" path="res://assets/img/arts/arts.png" id="1_4mg8c"]
[ext_resource type="Script" path="res://scene/cutscenes/cs-intro.gd" id="1_flkmj"]
[ext_resource type="PackedScene" uid="uid://bspf32n5wp0pj" path="res://scene/fx/fx-snow.tscn" id="2_i4h3q"]
[ext_resource type="Shader" path="res://assets/shaders/dither.gdshader" id="2_uwqnu"]
[ext_resource type="Material" uid="uid://bhaiush2cvw0u" path="res://assets/material/invert.tres" id="4_3hclh"]
[ext_resource type="PackedScene" uid="uid://dvcgcpotar8c3" path="res://scene/cutscenes/skip-cutscene.tscn" id="4_6bpeq"]
[ext_resource type="FontFile" uid="uid://cxeg4c7rwp2y3" path="res://assets/fonts/lowrez/lowrez.png" id="7_kigaw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jay72"]
shader = ExtResource("2_uwqnu")

[sub_resource type="Animation" id="Animation_a83yj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title/Label:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-17, 19)]
}

[sub_resource type="Animation" id="Animation_ullrt"]
resource_name = "intro"
length = 6.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bus:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-30, -0.25, 0, 0.25, 0, 28, -1.5, 0, 0.25, 0),
"times": PackedFloat32Array(0, 4.4)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Bus:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(44, -0.25, 0, 0.25, 0, 44, -0.25, 0, 0.25, 0, 43, -0.25, 0, 0.25, 0, 44, -0.25, 0, 0.25, 0, 44, -0.25, 0, 0.25, 0, 43, -0.25, 0, 0.25, 0, 44, -0.25, 0, 0.25, 0, 44, -0.25, 0, 0.25, 0, 43, -0.25, 0, 0.25, 0, 44, -0.25, 0, 0.25, 0, 43, -0.25, 0, 0.25, 0, 44, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2.2, 2.3, 2.4, 3, 3.1, 3.2, 4.4, 4.5, 4.6, 4.7, 5)
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_spawning_inmate"
}]
}

[sub_resource type="Animation" id="Animation_0w7e0"]
resource_name = "main-title"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title/Label:position")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-17, 19), Vector2(-17, 17)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ng3g4"]
_data = {
"RESET": SubResource("Animation_a83yj"),
"intro": SubResource("Animation_ullrt"),
"main-title": SubResource("Animation_0w7e0")
}

[node name="CutSceneIntro" type="Node"]
script = ExtResource("1_flkmj")
inmate_to_spawn = 10
metadata/_edit_horizontal_guides_ = [48.0]
metadata/_edit_vertical_guides_ = [84.0]

[node name="Bg" type="Node2D" parent="."]

[node name="Black" type="Sprite2D" parent="Bg"]
modulate = Color(0, 0, 0, 1)
position = Vector2(41.75, 11.25)
scale = Vector2(84.5, 23.5)
texture = ExtResource("1_4mg8c")
region_enabled = true
region_rect = Rect2(120, 10, 1, 1)

[node name="White" type="Sprite2D" parent="Bg"]
position = Vector2(41.75, 35.5)
scale = Vector2(84.5, 25)
texture = ExtResource("1_4mg8c")
region_enabled = true
region_rect = Rect2(120, 10, 1, 1)

[node name="Bg" type="Sprite2D" parent="Bg"]
material = SubResource("ShaderMaterial_jay72")
position = Vector2(42, 21)
texture = ExtResource("1_4mg8c")
region_enabled = true
region_rect = Rect2(48, 0, 84, 12)

[node name="Skip" parent="." instance=ExtResource("4_6bpeq")]
position = Vector2(77, 0)
time_to_skip = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ng3g4")
}
autoplay = "main-title"

[node name="Bus" type="Sprite2D" parent="."]
material = ExtResource("4_3hclh")
position = Vector2(-30, 44)
texture = ExtResource("1_4mg8c")
offset = Vector2(0, -5)
region_enabled = true
region_rect = Rect2(140, 37, 30, 10)

[node name="BusDoor" type="Marker2D" parent="Bus"]
position = Vector2(12, 1)

[node name="Turret" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(70, 38)
texture = ExtResource("1_4mg8c")
offset = Vector2(0.5, -9)
region_enabled = true
region_rect = Rect2(192, 29, 7, 18)

[node name="LampPost" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(61, 38)
texture = ExtResource("1_4mg8c")
offset = Vector2(0.5, -7.5)
flip_h = true
region_enabled = true
region_rect = Rect2(201, 32, 5, 15)

[node name="Welcome" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(53, 38)
texture = ExtResource("1_4mg8c")
offset = Vector2(0, -5.5)
region_enabled = true
region_rect = Rect2(171, 36, 16, 11)

[node name="BackBufferCopy2" type="BackBufferCopy" parent="."]
copy_mode = 2
rect = Rect2(0, 0, 84, 48)

[node name="Inmates" type="Node2D" parent="."]
position = Vector2(79, 51)

[node name="Turret2" type="Sprite2D" parent="."]
material = ExtResource("4_3hclh")
position = Vector2(79, 51)
texture = ExtResource("1_4mg8c")
offset = Vector2(0.5, -9)
region_enabled = true
region_rect = Rect2(192, 29, 7, 18)

[node name="BackBufferCopy3" type="BackBufferCopy" parent="."]
copy_mode = 2
rect = Rect2(0, 0, 84, 48)

[node name="Snow" parent="." instance=ExtResource("2_i4h3q")]
material = ExtResource("4_3hclh")
position = Vector2(34, -5)
amount = 50
preprocess = 5.0
randomness = 0.5
emission_rect_extents = Vector2(64, 10)
direction = Vector2(0.5, 1)
spread = 20.0

[node name="Title" type="Node2D" parent="."]
position = Vector2(21, 11)

[node name="Gulag" type="Sprite2D" parent="Title"]
position = Vector2(13, 0)
texture = ExtResource("1_4mg8c")
region_enabled = true
region_rect = Rect2(165, 10, 12, 10)

[node name="Gulag3" type="Sprite2D" parent="Title"]
position = Vector2(-11, 0)
texture = ExtResource("1_4mg8c")
region_enabled = true
region_rect = Rect2(165, 10, 12, 10)

[node name="Gulag2" type="Sprite2D" parent="Title"]
position = Vector2(1, 0)
texture = ExtResource("1_4mg8c")
region_enabled = true
region_rect = Rect2(145, 10, 20, 20)

[node name="Title" type="Sprite2D" parent="Title"]
position = Vector2(1, 9)
texture = ExtResource("1_4mg8c")
region_enabled = true
region_rect = Rect2(133, 0, 38, 9)

[node name="Label" type="Label" parent="Title"]
material = ExtResource("4_3hclh")
offset_left = -17.0
offset_top = 19.0
offset_right = 20.0
offset_bottom = 31.0
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("7_kigaw")
text = "press to start"
horizontal_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="skipped" from="Skip" to="." method="_on_skip_skipped"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
